--- a/app/src/main/res/layout/activity_search_results.xml
+++ b/app/src/main/res/layout/activity_search_results.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:xlmns="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_main"
+    android:id="@+id/activity_search_results"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.nerds.tcctest.MainActivity">
-
+    tools:context="com.example.nerds.tcctest.SearchResultsActivity">
 
     <include layout="@layout/toolbar"
-        android:id="@+id/my_toolbar"/>
+        android:id="@+id/search_results_toolbar"/>
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/listView_alimentos"
-        android:layout_below="@+id/my_toolbar" />
+        android:layout_below="@+id/search_results_toolbar"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/listView_searchResults" />
 </RelativeLayout>
