--- a/app/src/main/res/menu/menu_new.xml
+++ b/app/src/main/res/menu/menu_new.xml
@@ -1,10 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <!-- Botão adicionar alimentos -->
     <item
         android:id="@+id/newAlimento"
         android:title="Criar novo alimento"
         android:icon="@drawable/icon_add"
-        app:showAsAction="always"
-        ></item>
+        app:showAsAction="ifRoom|collapseActionView"
+        />
+
+    <item
+        android:id="@+id/menu_search"
+        android:title="@string/menu_search"
+        android:icon="@drawable/ic_action_search"
+        app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="android.support.v7.widget.SearchView"/>
+
+    <!-- Menu 3 pontos - opções - Opção 1 -->
+    <item android:id="@+id/menu_1"
+        android:title="@string/menu_1"/>
+
+    <!-- Opções extras \/
+    <item android:id="@+id/menu_2"
+        android:title="@string/menu_2"/>
+        -->
 </menu>
