--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:xlmns="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.nerds.tcctest.MainActivity">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ScrollView01"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
 
-
-    <include layout="@layout/toolbar"
-        android:id="@+id/my_toolbar"/>
-    <ListView
+    <RelativeLayout
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:xlmns="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/activity_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/listView_alimentos"
-        android:layout_below="@+id/my_toolbar" />
-</RelativeLayout>
+        tools:context="com.example.nerds.tcctest.MainActivity">
+
+        <include layout="@layout/toolbar"
+            android:id="@+id/my_toolbar" />
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:id="@+id/listView_alimentos"
+            android:layout_below="@+id/my_toolbar" />
+
+
+    </RelativeLayout>
+</ScrollView>
