--- a/app/src/main/res/layout/activity_configinicial.xml
+++ b/app/src/main/res/layout/activity_configinicial.xml
@@ -83,7 +83,7 @@
             android:text="@string/txt_UIporCHO_M"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/txtUIporCHO_M"
+            android:id="@+id/txtCHOporUI_M"
             android:textSize="20sp"
             android:textStyle="normal|bold"
             android:textAlignment="center"
@@ -95,14 +95,14 @@
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:ems="10"
-            android:id="@+id/txtbox_UIporCHO_M" />
+            android:id="@+id/txtbox_CHOporUI_M" />
 
         <!--Tarde-->
         <TextView
             android:text="@string/txt_UIporCHO_T"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/txt_UIporCHO_T"
+            android:id="@+id/txt_CHOporUI_T"
             android:textSize="20sp"
             android:textStyle="normal|bold"
             android:textAlignment="center"
@@ -114,14 +114,14 @@
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:ems="10"
-            android:id="@+id/txtbox_UIporCHO_T" />
+            android:id="@+id/txtbox_CHOporUI_T" />
 
         <!--Noite-->
         <TextView
             android:text="@string/txt_UIporCHO_N"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/txt_UIporCHO_N"
+            android:id="@+id/txt_CHOporUI_N"
             android:textSize="20sp"
             android:textStyle="normal|bold"
             android:textAlignment="center"
@@ -133,7 +133,7 @@
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:ems="10"
-            android:id="@+id/txtbox_UIporCHO_N" />
+            android:id="@+id/txtbox_CHOporUI_N" />
 
         <Button
             android:text="@string/continuar"
