--- a/app/src/main/res/layout/activity_configinicial.xml
+++ b/app/src/main/res/layout/activity_configinicial.xml
@@ -16,6 +16,18 @@
         <include layout="@layout/toolbar"
             android:id="@+id/my_toolbar"/>
 
+        <!-- Texto amigável de introdução -->
+        <TextView
+            android:text="@string/ci_txtMsg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/ci_textViewMsg"
+            android:textSize="19sp"
+            android:textStyle="normal|bold"
+            android:textAlignment="center"
+            android:textColor="@android:color/holo_purple"
+            android:layout_marginTop="2sp"/>
+
         <!--Campos fator sensibilidade-->
         <!--Manhã-->
         <TextView
@@ -23,15 +35,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/ci_textViewM"
-            android:fontFamily="sans-serif"
-            android:textSize="20sp"
+            android:textSize="19sp"
             android:textStyle="normal|bold"
             android:textAlignment="center"
             android:textColor="@android:color/black"
-            android:layout_marginTop="2sp"/>
+            android:layout_marginTop="10sp"/>
 
         <EditText
-            android:layout_width="231dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:ems="10"
@@ -44,14 +55,14 @@
             android:layout_height="wrap_content"
             android:id="@+id/ci_textViewT"
             android:fontFamily="sans-serif"
-            android:textSize="20sp"
+            android:textSize="19sp"
             android:textStyle="normal|bold"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             android:layout_marginTop="10sp"/>
 
         <EditText
-            android:layout_width="231dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:ems="10"
@@ -64,14 +75,14 @@
             android:layout_height="wrap_content"
             android:id="@+id/ci_textViewN"
             android:fontFamily="sans-serif"
-            android:textSize="20sp"
+            android:textSize="19sp"
             android:textStyle="normal|bold"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             android:layout_marginTop="10sp"/>
 
         <EditText
-            android:layout_width="231dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:ems="10"
@@ -84,14 +95,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/txtUIporCHO_M"
-            android:textSize="20sp"
+            android:textSize="19sp"
             android:textStyle="normal|bold"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             android:layout_marginTop="10sp" />
 
         <EditText
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:ems="10"
@@ -103,14 +114,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/txt_UIporCHO_T"
-            android:textSize="20sp"
+            android:textSize="19sp"
             android:textStyle="normal|bold"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             android:layout_marginTop="10sp" />
 
         <EditText
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:ems="10"
@@ -122,14 +133,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/txt_UIporCHO_N"
-            android:textSize="20sp"
+            android:textSize="19sp"
             android:textStyle="normal|bold"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             android:layout_marginTop="10sp" />
 
         <EditText
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:ems="10"
@@ -139,6 +150,8 @@
             android:text="@string/continuar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@android:color/holo_blue_dark"
             android:id="@+id/btn_cfg"
             android:onClick="gotoMain"
             android:layout_gravity="bottom"/>
