--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -49,8 +49,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/numPorcao"
         android:layout_below="@id/textCarb"
-        android:layout_centerInParent="true"
-        android:paddingTop="@dimen/activity_vertical_margin"/>
+        android:layout_centerInParent="true" />
 
     <LinearLayout
         android:id="@+id/LinearLayout02"
@@ -65,7 +64,7 @@
             android:text="@string/cancelar">
         </Button>
         <Button
-            android:id="@+id/Button03"
+            android:id="@+id/botaoSalvar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
