--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#0D88DF</color>
     <color name="colorPrimaryDark">#05385C</color>
-    <color name="colorAccent">#065E9C</color>
+    <color name="colorAccent">#065e9c</color>
 </resources>
