--- a/app/src/main/res/layout/activity_new_alimentoii.xml
+++ b/app/src/main/res/layout/activity_new_alimentoii.xml
@@ -69,7 +69,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:id="@+id/button10"
-                android:background="@drawable/ic_btn4_telarefii" />
+                android:background="@drawable/voltar" />
         </TableRow>
 
     </TableLayout>
