--- a/app/src/main/res/layout/activity_configinicial.xml
+++ b/app/src/main/res/layout/activity_configinicial.xml
@@ -94,20 +94,15 @@
             android:text="@string/txt_UIporCHO_M"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-<<<<<<< HEAD
-            android:id="@+id/txtUIporCHO_M"
-            android:textSize="19sp"
-=======
             android:id="@+id/txtCHOporUI_M"
             android:textSize="20sp"
->>>>>>> upstream/master
             android:textStyle="normal|bold"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             android:layout_marginTop="10sp" />
 
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:ems="10"
@@ -118,20 +113,15 @@
             android:text="@string/txt_UIporCHO_T"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-<<<<<<< HEAD
-            android:id="@+id/txt_UIporCHO_T"
-            android:textSize="19sp"
-=======
             android:id="@+id/txt_CHOporUI_T"
             android:textSize="20sp"
->>>>>>> upstream/master
             android:textStyle="normal|bold"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             android:layout_marginTop="10sp" />
 
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:ems="10"
@@ -142,31 +132,43 @@
             android:text="@string/txt_UIporCHO_N"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-<<<<<<< HEAD
-            android:id="@+id/txt_UIporCHO_N"
-            android:textSize="19sp"
-=======
             android:id="@+id/txt_CHOporUI_N"
             android:textSize="20sp"
->>>>>>> upstream/master
             android:textStyle="normal|bold"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             android:layout_marginTop="10sp" />
 
         <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:ems="10"
             android:id="@+id/txtbox_CHOporUI_N" />
 
+        <!-- Meta Glicêmica -->
+        <TextView
+            android:text="@string/txt_metaGlicemica"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/txt_meta"
+            android:textSize="20sp"
+            android:textStyle="normal|bold"
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            android:layout_marginTop="10sp" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            android:ems="10"
+            android:id="@+id/txtbox_meta" />
+
         <Button
             android:text="@string/continuar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@android:color/holo_blue_dark"
             android:id="@+id/btn_cfg"
             android:onClick="gotoMain"
             android:layout_gravity="bottom"/>
