--- a/app/src/main/res/layout/activity_configinicial.xml
+++ b/app/src/main/res/layout/activity_configinicial.xml
@@ -135,6 +135,24 @@
             android:ems="10"
             android:id="@+id/txtbox_CHOporUI_N" />
 
+        <TextView
+            android:text="@string/metaGlicemica"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/txt_metaGlicemica"
+            android:textSize="20sp"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textColor="@android:color/black"
+            />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/txtbox_metaGlicemica"/>
+
         <Button
             android:text="@string/continuar"
             android:layout_width="match_parent"
