--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#0D88DF</color>
-    <color name="colorPrimaryDark">#05385C</color>
+    <color name="colorPrimaryDark">#05385c</color>
     <color name="colorAccent">#065e9c</color>
 </resources>
