--- a/app/src/main/res/layout/design_refeicao.xml
+++ b/app/src/main/res/layout/design_refeicao.xml
@@ -33,8 +33,8 @@
             android:layout_margin="@dimen/activity_vertical_margin"/>
 
         <TextView
-            android:text="hora"
-            android:layout_width="match_parent"
+            android:text="Data"
+            android:layout_width="265dp"
             android:layout_height="wrap_content"
             android:id="@+id/TextHora"
             android:layout_gravity="end"
