--- a/app/src/main/res/layout/activity_meus_alimentos.xml
+++ b/app/src/main/res/layout/activity_meus_alimentos.xml
@@ -13,5 +13,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:id="@+id/listView_alimentos"
-        android:layout_below="@+id/my_toolbar" />
+        android:layout_below="@+id/my_toolbar"
+        android:focusable="true"
+        />
 </LinearLayout>
