--- a/app/src/main/res/layout/activity_new_refeicao.xml
+++ b/app/src/main/res/layout/activity_new_refeicao.xml
@@ -112,10 +112,18 @@
         />
 
     <Button
-        android:text="Salvar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ref_listAlimentos"
+        android:id="@+id/ref_btnNewAlimento"
+        android:text="Adicionar Alimento"
+        />
+
+    <Button
+        android:text="Salvar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ref_btnNewAlimento"
         android:id="@+id/ref_btnSalvar"
         android:background="@android:color/holo_blue_dark" />
 
