--- a/app/src/main/res/layout/design_refeicao.xml
+++ b/app/src/main/res/layout/design_refeicao.xml
@@ -24,16 +24,15 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:text="TextView"
+            android:text="Merenda"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/nomeRefeicao"
-            tools:text="@string/app_name"
             android:textSize="30sp"
             android:layout_margin="@dimen/activity_vertical_margin"/>
 
         <TextView
-            android:text="Data"
+            android:text="28/11/2016"
             android:layout_width="265dp"
             android:layout_height="wrap_content"
             android:id="@+id/TextHora"
