Revert "Versão para apresentação - a ser modificada"
This reverts commit bda87c4932a1b6410274bceedf0602c09c78dd79.

--- a/app/src/main/res/layout/activity_detalhes_refeicao.xml
+++ b/app/src/main/res/layout/activity_detalhes_refeicao.xml
@@ -11,7 +11,7 @@
     tools:context="com.example.nerds.tcctest.DetalhesRefeicaoActivity">
 
     <TextView
-        android:text="Merenda"
+        android:text="Nome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -21,7 +21,7 @@
         android:textSize="32sp" />
 
     <TextView
-        android:text="Manhã"
+        android:text="Tipo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textNome"
@@ -32,15 +32,14 @@
         android:textColor="@color/colorPrimaryDark" />
 
     <TextView
-        android:text="1,43"
+        android:text="UI"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textTipo"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:id="@+id/textUI"
-        android:layout_marginBottom="30dp"
-        android:textSize="30sp" />
+        android:layout_marginBottom="30dp"/>
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -54,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/detalhes_Voltar" />
+            android:id="@+id/button" />
 
         <Button
             android:text="@string/excluir"
