--- a/app/src/main/res/layout/activity_configuracoes.xml
+++ b/app/src/main/res/layout/activity_configuracoes.xml
@@ -2,7 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ScrollView01"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="fill_parent" >
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -34,6 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/newFatorM"
+        android:inputType="numberDecimal"
         android:hint="@string/txtfatorsensiManha"
         android:textAlignment="center"/>
 
@@ -41,6 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/newFatorT"
+        android:inputType="numberDecimal"
         android:hint="@string/txtfatorsensiTarde"
         android:textAlignment="center"/>
 
@@ -48,6 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/newFatorN"
+        android:inputType="numberDecimal"
         android:hint="@string/txtfatorsensiNoite"
         android:textAlignment="center"
         />
@@ -66,6 +69,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/newCHOm"
+        android:inputType="numberDecimal"
         android:hint="@string/txt_UIporCHO_M"
         android:textAlignment="center"
         />
@@ -74,6 +78,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/newCHOt"
+        android:inputType="numberDecimal"
         android:hint="@string/txt_UIporCHO_T"
         android:textAlignment="center"
         />
@@ -82,6 +87,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/newCHOn"
+        android:inputType="numberDecimal"
         android:hint="@string/txt_UIporCHO_N"
         android:textAlignment="center"
         />
@@ -100,6 +106,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/newMeta"
+        android:inputType="numberDecimal"
         android:hint="@string/metaGlicemica"
         android:textAlignment="center"
         />
